--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1,4 +1,4 @@
-.chart{
+/* .chart{
     width: 100%;
     min-height: 400px;
 }
@@ -10,4 +10,4 @@
 
 #btn-borrar-filtro {
   display: none;
-}
+} */
